external-crates/move/crates/move-compiler/tests/move_check/parser/function_type_extra_comma.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/function_type_extra_comma.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_type_extra_comma.move:2:12
  │
2 │     fun fn<,T>() { } // Test a comma before the first type parameter
  │            ^ Expected a type parameter

